--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build:client": "react-scripts build",
-    "build": "npm run build:client && mv build ../server",
+    "build": "npm run build:client && rm -rf ../server/build && mv build ../server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
